# benchmark-visualizer

./: .gitignore  .gitlab-ci.yml  .gitmodules  3d-playground-X2.ipynb  3d-playground-new.ipynb  3d-playground.ipynb  LICENSE  README.md  alg_runner.py  black.sh  cli_main.py  config.py  deep.json  demo_log_latest.csv  errlog.txt  exp_config.yaml  exp_config_diverse.yaml  experiment_settings-n_obj.yaml  experiment_settings.yaml  k-means.ipynb  main.py  mlflow_create_helper.py  nd-playground-new.ipynb  nd-playground-rotated.ipynb  nd-playground.ipynb  pareto_test.py  playground.py  proving_ground.ipynb  pyproject.toml  requirements.txt  research_notes.md  run_300_times.sh  run_experiment_flow.sh  sample.json  sample_experiment.ipynb  simple_sample.json  submit_to_ito.py  test.ipynb  test_runx_2023-01-16T10-30-27.298413.csv  test_runx_2023-02-02T09-50-04.172411.csv  (+3 more)
.devcontainer/: Dockerfile  Dockerfile.dev  devcontainer.json
PI_reference/: csv_processor.ipynb  k-means-eval.ipynb  k-means.ipynb  main.py  pareto_playground.ipynb  pareto_playground2.ipynb  pareto_playground2.py  performance_indicator.ipynb  performance_indicators_pymoo.ipynb  pyhisto.ipynb  sample_experiment.ipynb  value_sample.py  x-means.ipynb
bbbc/: experiment_settings-n_obj.yaml  experiment_settings.yaml  ito_base.sh  main.py  research_notes.md  submit_to_ito.py
core/: problem_constructor.py  status_logger.py
custom_benchmark_problems/: multiobjective.py  playground.ipynb  single_objective.py
database/: crud.py  database.py  models.py  schemas.py
experiment_trees/: breadth.json  depth.json  (+16 more)
(+97 files in other folders)
