[project]
name = "nix-vscode"
version = "0.1.0"
description = ""
authors = [
    {name = "Daisuke Sakurai",email = "d.sakurai0@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "notebook (>=7.4.2,<8.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "plotly (>=6.1.1,<7.0.0)",
    "jmetalpy (~=1.5.5)",
    "black (==22.12.0)",
    "networkx (==2.8.8)",
    "numpy (==1.23.5)",
    "fastapi (==0.88.0)",
    "sqlalchemy (==1.4.46)",
    "pydantic (==1.10.4)",
    "passlib (~=1.7.4)",
    "igraph (==0.10.3)",
    "mlflow (==2.1.1)",
    "matplotlib (==3.6.2)",
    "urllib3 (==1.26.13)",
    "pandas (~=1.5.2)",
    "tqdm (==4.66.4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch_source_cuda126"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"

[tool.poetry.dependencies]
torch = {source = "torch_source_cuda126"}
